[project]
name = "prompt-writing-assistant"
version = "0.1.5"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
 "anyio>=4.10.0",
 "llmada>=1.0.5",
 "pytest>=8.4.1",
 "pytest-asyncio>=1.1.0",
 "pytest-tornasync>=0.6.0.post2",
 "toml==0.10.2",
]

[tool.setuptools.package-data]
prompt_writing_assistant = [ "config.yaml",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
pythonpath = [ "src",]
