[project]
name = "prompt-writing-assistant"
version = "0.1.6"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "anyio>=4.10.0", "llama-index-vector-stores-qdrant>=0.6.1", "llmada>=1.0.5", "pytest>=8.4.1", "pytest-asyncio>=1.1.0", "pytest-tornasync>=0.6.0.post2", "qdrant-client>=1.15.1", "toml==0.10.2", "uvicorn>=0.35.0",]

[tool.setuptools.package-data]
prompt_writing_assistant = [ "config.yaml",]

[tool.pytest.ini_options]
testpaths = [ "tests",]
pythonpath = [ "src",]
